# avm-sycl-gpu-acceleration

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FUNDING.yml  LICENSE  PROMOTION.md  PROMOTION_CONTENT.md  README-en.md  README-zh.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
cmake/: sycl.cmake
docs/: TEST_REPORT.md  architecture.md  index.html
examples/: basic_usage.cpp
examples/integration/: README.md  ffmpeg_integration.cpp  opencv_integration.cpp
src/: CMakeLists.txt  sycl_context.cpp  sycl_context.hpp  sycl_intra.cpp  sycl_intra.hpp  sycl_lpf.cpp  sycl_lpf.hpp  sycl_me.cpp  sycl_me.hpp  sycl_txfm.cpp  sycl_txfm.hpp  sycl_txfm_optimized.cpp  sycl_txfm_optimized.hpp  sycl_wrapper.hpp
src/av2/common/: enums.h
src/avm_dsp/: loopfilter.h
tests/: CMakeLists.txt  sycl_context_test.cpp  sycl_perf_test.cpp  sycl_txfm_test.cpp
